--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/src/firebase_config.js
+src/firebase_config.js
 
 # Editor directories and files
 .idea
